--- a/ShradhaBookStore/Views/User/Product_Info.cshtml
+++ b/ShradhaBookStore/Views/User/Product_Info.cshtml
@@ -99,7 +99,7 @@
                                     <div class="col d-grid">
                                         @if(ViewData["Cart"] == null){
 
-                                        <a asp-action="Add_to_Cart" id="addToCartBtn" asp-route-product="@product.Id" asp-route-price="@product.Price" asp-route-quantity="1" class="btn btn-outline-primary btn-lg w-100">Add To Cart</a>
+                                        <a asp-action="Add_to_Cart" id="addToCartBtn" asp-route-productid="@product.Id" asp-route-price="@product.Price" asp-route-quantity="1" class="btn btn-outline-primary btn-lg w-100">Add To Cart</a>
                                         }
                                         else
                                         {
