--- a/ShradhaBookStore/Views/Shared/_layoutAdmin.cshtml
+++ b/ShradhaBookStore/Views/Shared/_layoutAdmin.cshtml
@@ -238,7 +238,7 @@
                                             <i class="ti ti-list-check fs-6"></i>
                                             <p class="mb-0 fs-3">My Task</p>
                                         </a>
-                                        <a href="./authentication-login.html" class="btn btn-outline-primary mx-3 mt-2 d-block">Logout</a>
+                                        <a asp-action="Logout" asp-controller="User" class="btn btn-outline-primary mx-3 mt-2 d-block">Logout</a>
                                     </div>
                                 </div>
                             </li>
