--- a/ShradhaBookStore/Views/Shared/_LayoutGuest.cshtml
+++ b/ShradhaBookStore/Views/Shared/_LayoutGuest.cshtml
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" href="~/images/apple-icon.png">
-    <link rel="shortcut icon" type="image/x-icon" href="~/images/favicon.ico">
+    <link rel="shortcut icon" type="image/png" href="~/images/Logo.png" />
     <link rel="stylesheet" href="~/css/templatemo.min.css">
     <link rel="stylesheet" href="~/css/custom.css">
     <!-- Load fonts style after rendering the layout styles -->
@@ -105,10 +105,10 @@
                             <a class="nav-link" >About us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="shop.html">Shop</a>
+                            <a class="nav-link" asp-action="Shop">Shop</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
+                            <a class="nav-link" >Contact</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-action="Faqs">Faqs</a>
